# voicevox-docker-mcp

./: Dockerfile  README.md  asound.conf  docker-compose.yml  main.py  pyproject.toml  start.sh
voicevox_docker_mcp/: README.md  __init__.py  api.py  main.py  test_api.py  test_voicevox.py
