[project]
name = "voicevox-docker-mcp"
version = "0.1.0"
description = "VOICEVOX音声合成API - FastAPIとMCPの実装"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.68.0",
    "fastapi-mcp>=0.1.0",
    "uvicorn>=0.15.0",
    "requests>=2.26.0",
    "python-multipart>=0.0.5",
    "simpleaudio>=1.0.4",
    "pydantic>=2.0.0",
    "pytest (>=8.3.5,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
